# lingmo-installer-new

./: .clog.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
.tx/: config
check_hooks/: basic_utils.sh  check_start.sh  lightdm-start.sh  lightdm-stop.sh
check_hooks/after_check/: 99_disable_check_mode.job
check_hooks/before_check/: 02_create_in_check_file.job
data/: CMakeLists.txt  lightdm-installer-greeter.desktop  lingmo-installer.conf
data/live-boot/: 9991-override-check-dev.sh
data/live-config/: 1080-lingmo-installer-launcher  1081-lingmo-auto-install  1082-lingmo-livecd
data/systemd/: lingmo-installer-auto-install.service  lingmo-installer-first-boot.service  lingmo-installer-preload.service  lingmo-installer.service  lingmo-installer.target
debian/: changelog  control  copyright  lingmo-installer-oem.install  lingmo-installer.install  lingmo-installer.postinst
docs/: CMakeLists.txt  i18n.md  lightdm.md  lingmo-installer-first-boot.md  lingmo-installer.conf.md  lingmo-installer.md  oem.md  partition.md  uefi.md
hooks/: CMakeLists.txt  auto_part.sh  basic_utils.sh  first_boot_setup.sh  hook_manager.sh
hooks/after_chroot/: 00_print_lingmo_conf.job  01_copy_aptcache.job  02_generate_fstab.job  03_remove_policy_rc.job  49_copy_boot_files_loongson.job  89_copy_installer_log.job  90_unmount.job  genfstab
hooks/before_chroot/: 00_print_disk_info.job  01_update_time_standard.job  02_detect_liveboot_method.job  09_inhibit_screensaver.job  11_mount_target.job  12_create_swap_file.job  21_extract_base_filesystem.job  31_get_screen_resolution.job  41_setup_mount_points.job  42_create_policy_rc.job  85_copy_settings_file.job  86_copy_grub_themes.job  90_copy_oem_debug_folder.job  99_print_info.job
hooks/in_chroot/: 00_print_info.job  01_setup_cdrom_repository.job  02_setup_bootloader_arm64.job  02_setup_bootloader_x86.job  03_setup_license_activator.job  04_netcfg_network_manager.job  05_enable_network_manager.job  06_install_drivers.job  07_fix_command_capabilities.job  08_fix_network_drivers.job  09_generate_machine_id.job  21_setup_services.job  22_setup_grub_menu_x86.job  23_setup_deb_packages.job  24_setup_os_version.job  25_setup_plymouth.job  26_ssd_plymouth_alternatives.job  27_setup_lightdm.job  27_setup_sddm.job  28_generate_font_cache.job  29_refresh_desktop_cache.job  30_setup_cryptdisk.job  30_update_gtk_im_modules.job  31_setup_vendor_logo.job  32_setup_user_skel.job  33_setup_lightdm_auto_login.job  34_setup_livefs.job  49_generate_reboot_setup_file.job  51_setup_keyboard.job  52_setup_locale_timezone.job  53_setup_user.job  54_prepare_customize_user.job  55_customize_user.job  61_override_desktop_schema.job  90_setup_apt_sources.job  91_remove_unused_packages.job  99_update_initramfs_sw.job
i18n/: installer-af.ts  installer-am_ET.ts  installer-ar.ts  installer-ast.ts  installer-bg.ts  installer-ca.ts  installer-cs.ts  installer-da.ts  installer-de.ts  installer-en_US.ts  installer-es.ts  installer-es_419.ts  installer-fa.ts  installer-fi.ts  installer-fr.ts  installer-gl_ES.ts  installer-he.ts  installer-hr.ts  installer-hu.ts  installer-id.ts  installer-it.ts  installer-ko.ts  installer-lt.ts  installer-mn.ts  installer-ms.ts  installer-nb.ts  installer-nl.ts  installer-pl.ts  installer-pt.ts  installer-pt_BR.ts  installer-ro.ts  installer-ru.ts  installer-sk.ts  installer-sl.ts  installer-sr.ts  installer-tr.ts  installer-ug.ts  installer-uk.ts  installer-zh_CN.ts  installer-zh_TW.ts  (+2 more)
resources/: CMakeLists.txt  arm_default_settings.ini  com.lingmo.pkexec.installer-first-boot.policy  com.lingmo.pkexec.installer.policy  default_settings.ini  lingmo-installer-oem.desktop  lingmo-installer.desktop  loongson_default_settings.ini  oem_settings.json  professional_default_settings.ini  sw_default_settings.ini
resources/slide/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: lingmo-installer-auto-install  lingmo-installer-first-boot-pkexec  lingmo-installer-pkexec  lingmo_installer.cpp  lingmo_installer_first_boot.cpp  lingmo_installer_oem.cpp  lingmo_installer_settings.cpp  lingmo_installer_simpleini.cpp  lingmo_installer_unsquashfs.cpp  lingmo_installer_user_form.cpp  reboot_system.cpp  root_unittest_main.cpp  unittest_main.cpp  unsquashfs_progress.cpp
src/base/: command.cpp  command.h  command_test.cpp  consts.h  file_util.cpp  file_util.h  file_util_test.cpp  string_util.cpp  string_util.h  string_util_test.cpp  thread_util.cpp  thread_util.h
src/license/: license.qrc  lingmo-end-user-license-agreement_community_en_US.txt  lingmo-end-user-license-agreement_community_zh_CN.txt  lingmo-end-user-license-agreement_en_US.txt  lingmo-end-user-license-agreement_zh_CN.txt
src/oem/: oem_window.cpp  oem_window.h
src/partman/: device.cpp  device.h  fs.cpp  fs.h  libparted_util.cpp  libparted_util.h  libparted_util_test.cpp  operation.cpp  operation.h  operation_root_test.cpp  operation_test.cpp  os_prober.cpp  os_prober.h  os_prober_test.cpp  partition.cpp  partition.h  partition_format.cpp  partition_format.h  partition_manager.cpp  partition_manager.h  partition_manager_test.cpp  partition_test.cpp  partition_usage.cpp  partition_usage.h  partition_usage_test.cpp  structs.cpp  structs.h  utils.cpp  utils.h
src/service/: first_boot_hook_worker.cpp  first_boot_hook_worker.h  hooks_manager.cpp  hooks_manager.h  log_manager.cpp  log_manager.h  power_manager.cpp  power_manager.h  process_util.cpp  process_util.h  screen_brightness.cpp  screen_brightness.h  settings_manager.cpp  settings_manager.h  settings_name.h  system_language.cpp  system_language.h  system_languages_test.cpp  timezone_manager.cpp  timezone_manager.h  timezone_manager_test.cpp
src/sysinfo/: dev_disk.cpp  dev_disk.h  dev_disk_test.cpp  iso3166.cpp  (+38 more)
tools/: CMakeLists.txt  blur_image.sh  generate_backward_timezone.py  generate_qrc.py  install_deps.sh  language_list_csv_to_json.py  pretty_log.sh  regenerate_oem_iso.sh  replace_dash_with_underscore.py  scale_slide_images.sh  scan_regdomain.sh  sync_repo.sh  update_default_settings.py
(+220 files in other folders)
